Builds/build_1/CactusLang/Cactus/GrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /mnt/warehouse/BME/sem6/onlab/cactus_project/Builds/build_1/Grammar.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class GrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		KYW_INCLUDE=1, KYW_STRUCT=2, KYW_IMPLEMENTS=3, KYW_CLASS=4, KYW_STATIC=5, 
		KYW_TRUE=6, KYW_FALSE=7, KYW_NULL=8, KYW_IF=9, KYW_ELSE=10, KYW_FOR=11, 
		KYW_WHILE=12, KYW_RETURN=13, KYW_BREAK=14, KYW_CONTINUE=15, KYW_FREE=16, 
		KYW_ALLOC=17, TAG_PRFX=18, OP_ASG=19, UNOP_INC=20, UNOP_DCR=21, LUNOP_L_NOT=22, 
		LUNOP_B_NOT=23, LUNOP_SIZEOF=24, OP_STAR=25, OP_DIV=26, OP_REM=27, OP_ADD=28, 
		OP_SUB=29, OP_B_AND=30, OP_B_OR=31, OP_B_XOR=32, OP_LSH=33, OP_RSH=34, 
		OP_EQL=35, OP_L_AND=36, OP_L_OR=37, OP_NEQ=38, OP_LST=39, OP_GRT=40, OP_LSEQ=41, 
		OP_GREQ=42, OP_LAMDA=43, OP_ACC=44, OP_REF=45, COMMA=46, BODY_OPN=47, 
		BODY_CLS=48, PARN_OPN=49, PARN_CLS=50, SQPN_OPN=51, SQPN_CLS=52, PPC_C_BODY_OPN=53, 
		PPC_C_BODY_CLS=54, PPC_C_CODE=55, PPC_C_LAMDA=56, S_QT=57, D_QT=58, EOS=59, 
		INT_STR=60, HEX_STR=61, OCT_STR=62, BIN_STR=63, FLOAT_STR=64, CHAR=65, 
		STRING=66, TAG=67, ID=68, PTR_ID=69, PPC_ID=70, PPC_DEEP_ID=71, COMMENT=72, 
		LINE_COMMENT=73, WHITESPACE=74, NEWLINE=75;
	public const int
		RULE_codefile = 0, RULE_tags = 1, RULE_tag = 2, RULE_fileStatement = 3, 
		RULE_preprocessor_stm = 4, RULE_filepath = 5, RULE_ppc__Include = 6, RULE_type = 7, 
		RULE_fileVarDcl = 8, RULE_funcDclHeader = 9, RULE_funcDcl = 10, RULE_funcLamdBody = 11, 
		RULE_returnType = 12, RULE_param = 13, RULE_paramName = 14, RULE_funcName = 15, 
		RULE_varName = 16, RULE_fieldDcl = 17, RULE_structName = 18, RULE_structDcl = 19, 
		RULE_structBody = 20, RULE_className = 21, RULE_classDcl = 22, RULE_parentClass = 23, 
		RULE_interface = 24, RULE_interfaces = 25, RULE_classBody = 26, RULE_codeBody = 27, 
		RULE_statement = 28, RULE_varDcl = 29, RULE_varDclBody = 30, RULE_expressionStatement = 31, 
		RULE_expression = 32, RULE_opMultLvl = 33, RULE_opAddLvl = 34, RULE_opBitLvl = 35, 
		RULE_opCompLvl = 36, RULE_opLeftUn = 37, RULE_opRightUn = 38, RULE_opAssignmentLvl = 39, 
		RULE_primaryExp = 40, RULE_objFuncCall = 41, RULE_objFieldRef = 42, RULE_primaryExpVal = 43, 
		RULE_accOp = 44, RULE_fieldRef = 45, RULE_parenthsExp = 46, RULE_alloc = 47, 
		RULE_free = 48, RULE_explicitCast = 49, RULE_funcCall = 50, RULE_funcParamVals = 51, 
		RULE_funcRef = 52, RULE_literalExp = 53, RULE_nullLiteral = 54, RULE_numSign = 55, 
		RULE_numLiteral = 56, RULE_intLiteral = 57, RULE_intDecLiteral = 58, RULE_intHexLiteral = 59, 
		RULE_intBinLiteral = 60, RULE_intOctLiteral = 61, RULE_floatLiteral = 62, 
		RULE_strLiteral = 63, RULE_charLiteral = 64, RULE_boolLiteral = 65, RULE_varRef = 66, 
		RULE_ifStatement = 67, RULE_elseStatement = 68, RULE_returnStatement = 69, 
		RULE_continueStatement = 70, RULE_breakStatement = 71, RULE_loopDecl = 72, 
		RULE_loopCond = 73, RULE_endExp = 74, RULE_forLoop = 75, RULE_whileLoop = 76, 
		RULE_ppc__C_Code_Body = 77, RULE_ppc__C_id = 78, RULE_ppc__C_Func = 79, 
		RULE_ppc__C_Func_Map = 80, RULE_ppc__varRef = 81, RULE_ppc__funcRef = 82, 
		RULE_ppc__funcCall = 83;
	public static readonly string[] ruleNames = {
		"codefile", "tags", "tag", "fileStatement", "preprocessor_stm", "filepath", 
		"ppc__Include", "type", "fileVarDcl", "funcDclHeader", "funcDcl", "funcLamdBody", 
		"returnType", "param", "paramName", "funcName", "varName", "fieldDcl", 
		"structName", "structDcl", "structBody", "className", "classDcl", "parentClass", 
		"interface", "interfaces", "classBody", "codeBody", "statement", "varDcl", 
		"varDclBody", "expressionStatement", "expression", "opMultLvl", "opAddLvl", 
		"opBitLvl", "opCompLvl", "opLeftUn", "opRightUn", "opAssignmentLvl", "primaryExp", 
		"objFuncCall", "objFieldRef", "primaryExpVal", "accOp", "fieldRef", "parenthsExp", 
		"alloc", "free", "explicitCast", "funcCall", "funcParamVals", "funcRef", 
		"literalExp", "nullLiteral", "numSign", "numLiteral", "intLiteral", "intDecLiteral", 
		"intHexLiteral", "intBinLiteral", "intOctLiteral", "floatLiteral", "strLiteral", 
		"charLiteral", "boolLiteral", "varRef", "ifStatement", "elseStatement", 
		"returnStatement", "continueStatement", "breakStatement", "loopDecl", 
		"loopCond", "endExp", "forLoop", "whileLoop", "ppc__C_Code_Body", "ppc__C_id", 
		"ppc__C_Func", "ppc__C_Func_Map", "ppc__varRef", "ppc__funcRef", "ppc__funcCall"
	};

	private static readonly string[] _LiteralNames = {
		null, "'include'", "'struct'", "'implements'", "'class'", "'static'", 
		"'true'", "'false'", "'nullptr'", "'if'", "'else'", "'for'", "'while'", 
		"'return'", "'break'", "'continue'", "'free'", "'alloc'", "'@'", "'='", 
		"'++'", "'--'", "'!'", "'~'", "'sizeof'", "'*'", null, "'%'", "'+'", "'-'", 
		"'&'", "'|'", "'^'", "'<<'", "'>>'", "'=='", "'&&'", "'||'", "'!='", "'<'", 
		"'>'", "'<='", "'>='", "'=>'", "':'", "'.'", "','", "'{'", "'}'", "'('", 
		"')'", "'['", "']'", null, null, null, null, "'''", "'\"'", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KYW_INCLUDE", "KYW_STRUCT", "KYW_IMPLEMENTS", "KYW_CLASS", "KYW_STATIC", 
		"KYW_TRUE", "KYW_FALSE", "KYW_NULL", "KYW_IF", "KYW_ELSE", "KYW_FOR", 
		"KYW_WHILE", "KYW_RETURN", "KYW_BREAK", "KYW_CONTINUE", "KYW_FREE", "KYW_ALLOC", 
		"TAG_PRFX", "OP_ASG", "UNOP_INC", "UNOP_DCR", "LUNOP_L_NOT", "LUNOP_B_NOT", 
		"LUNOP_SIZEOF", "OP_STAR", "OP_DIV", "OP_REM", "OP_ADD", "OP_SUB", "OP_B_AND", 
		"OP_B_OR", "OP_B_XOR", "OP_LSH", "OP_RSH", "OP_EQL", "OP_L_AND", "OP_L_OR", 
		"OP_NEQ", "OP_LST", "OP_GRT", "OP_LSEQ", "OP_GREQ", "OP_LAMDA", "OP_ACC", 
		"OP_REF", "COMMA", "BODY_OPN", "BODY_CLS", "PARN_OPN", "PARN_CLS", "SQPN_OPN", 
		"SQPN_CLS", "PPC_C_BODY_OPN", "PPC_C_BODY_CLS", "PPC_C_CODE", "PPC_C_LAMDA", 
		"S_QT", "D_QT", "EOS", "INT_STR", "HEX_STR", "OCT_STR", "BIN_STR", "FLOAT_STR", 
		"CHAR", "STRING", "TAG", "ID", "PTR_ID", "PPC_ID", "PPC_DEEP_ID", "COMMENT", 
		"LINE_COMMENT", "WHITESPACE", "NEWLINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Grammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CodefileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GrammarParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FileStatementContext[] fileStatement() {
			return GetRuleContexts<FileStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FileStatementContext fileStatement(int i) {
			return GetRuleContext<FileStatementContext>(i);
		}
		public CodefileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_codefile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterCodefile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitCodefile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCodefile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CodefileContext codefile() {
		CodefileContext _localctx = new CodefileContext(Context, State);
		EnterRule(_localctx, 0, RULE_codefile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 171;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==KYW_STRUCT || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & 7L) != 0)) {
				{
				{
				State = 168;
				fileStatement();
				}
				}
				State = 173;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 174;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TagsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TagContext[] tag() {
			return GetRuleContexts<TagContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TagContext tag(int i) {
			return GetRuleContext<TagContext>(i);
		}
		public TagsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tags; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterTags(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitTags(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTags(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TagsContext tags() {
		TagsContext _localctx = new TagsContext(Context, State);
		EnterRule(_localctx, 2, RULE_tags);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 177;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 176;
					tag();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 179;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TagContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TAG() { return GetToken(GrammarParser.TAG, 0); }
		public TagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tag; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterTag(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitTag(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTag(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TagContext tag() {
		TagContext _localctx = new TagContext(Context, State);
		EnterRule(_localctx, 4, RULE_tag);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 181;
			Match(TAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TagsContext tags() {
			return GetRuleContext<TagsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EOS() { return GetToken(GrammarParser.EOS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FileVarDclContext fileVarDcl() {
			return GetRuleContext<FileVarDclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDclContext funcDcl() {
			return GetRuleContext<FuncDclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StructDclContext structDcl() {
			return GetRuleContext<StructDclContext>(0);
		}
		public FileStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterFileStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitFileStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFileStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileStatementContext fileStatement() {
		FileStatementContext _localctx = new FileStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_fileStatement);
		try {
			State = 191;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 183;
				tags();
				State = 184;
				Match(EOS);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 186;
				fileVarDcl();
				State = 187;
				Match(EOS);
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				{
				State = 189;
				funcDcl();
				}
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				{
				State = 190;
				structDcl();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Preprocessor_stmContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Ppc__IncludeContext ppc__Include() {
			return GetRuleContext<Ppc__IncludeContext>(0);
		}
		public Preprocessor_stmContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preprocessor_stm; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterPreprocessor_stm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitPreprocessor_stm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessor_stm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Preprocessor_stmContext preprocessor_stm() {
		Preprocessor_stmContext _localctx = new Preprocessor_stmContext(Context, State);
		EnterRule(_localctx, 8, RULE_preprocessor_stm);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 193;
			ppc__Include();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
